# PYTHON_duolingoVocabDownloader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
